fix blog post header spacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -59,7 +59,7 @@ body.sticky-bottom-footer {
 // Project-specific h2 styling
 .post {
   // Blog post specific h3 margin
-  &.post-content h3 {
+  .post-content h3 {
     margin-top: 2.5rem;
   }
 
